test/vlt/01-syntax/inv_exception/inv_exception.expected
File "inv_exception.ml", line 1, characters 39-41:
1 | let () = [%debug_log "msg" [%EXCEPTION 10]]
                                           ^^
Error: This expression has type int but an expression was expected of type
         exn
