test/vlt/01-syntax/inv_exception/inv_exception.ml
let () = [%debug_log "msg" [%EXCEPTION 10]]
